log/build_2025-01-31_17-51-12/camera/stderr.log
  File "/home/kisangpark/ros2_ws/install/camera/lib/python3.10/site-packages/camera/cam_process.py", line 40
    except Exception:
    ^^^^^^
SyntaxError: invalid syntax

